# PyGIS-Blog

./: .gitignore  404.html  CNAME  LICENSE  README.md  _config.yml  feed.xml  index.html  post-tipo.ipynb  pyproject.toml  quarto_download_and_install.sh  robots.txt  sitemap.xml  template.ipynb
.github/: FUNDING.yml
_action_files/: settings.ini
_fastpages_docs/: _setup_pr_template.md
_notebooks/: 2022-03-31 - da-point-a-pointz.ipynb  2022-03-31-da-point-a-pointz.ipynb  2022-04-07-analisi-di-visibilita.ipynb  2022-04-18-tagliare-una-linea-con-un-punto.ipynb  2022-04-19-tagliare-una-linea-con-un-punto.ipynb  2022-05-21-verificare-il-potenziale-fotovoltaico-di-un-tetto.ipynb  2022-05-22-verificare-il-potenziale-fotovoltaico-di-un-tetto.ipynb  post-tipo.ipynb
_pages/: about.md
about/: index.html
articles_resources/: esposizione.ipynb
assets/css/: style.css.map
assets/js/: search-data.json  search.js
categories/: index.html
notebooks/2022-03-31/: da-point-a-pointz.html  da-point-a-pointz.ipynb
notebooks/2022-04-07/: analisi-di-visibilita.ipynb
notebooks/2022-05-22/: verificare-il-potenziale-fotovoltaico-di-un-tetto.ipynb
notebooks/2022-08-26/: analisi-della-copertura-del-suolo-in-italia.ipynb
pygisblog/: .gitignore  _quarto.yml  about.qmd  index.qmd
pygisblog/docs/: 404.html  about.html  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
sample_data/: capoluoghi_di_regione.dbf  capoluoghi_di_regione.shp  capoluoghi_di_regione.shx
sample_data/add_z/: add_z.qgs  clip_dem.tif  points.dbf  points.qmd  points.shp  points.shx
sample_data/photovoltaic_potential_analysis/: buildings_footprint.dbf  buildings_footprint.shp  buildings_footprint.shx  dsm.tif
sample_data/viewshed/: ispra_dtm_20.tif  poi.dbf  poi.qmd  (+2 more)
search/: index.html
(+63 files in other folders)
