[tool.poetry]
name = "pygis blog"
version = "0.1.0"
description = "Manipolare i dati GIS con Python!"
authors = ["Massimiliano Moraca <info@massimilianomoraca.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.13.2"
rasterio = "^1.3.8"
rioxarray = "^0.15.0"
xarray-spatial = "^0.3.7"
contextily = "^1.3.0"
rtree = "^1.0.1"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
folium = "^0.14.0"
matplotlib = "^3.7.2"
nbconvert = "^7.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
