[tool.poetry]
name = "pygis-blog"
version = "0.2.0"
description = "\"Manipolare i dati GIS con Python!\""
authors = ["Massimiliano Moraca <info@massimilianomoraca.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.1"
rioxarray = "^0.15.0"
xarray-spatial = "^0.3.7"
contextily = "^1.4.0"
rtree = "^1.1.0"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
folium = "^0.15.0"
matplotlib = "^3.8.2"
nbconvert = "^7.11.0"
osmnx = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
